# gradients-and-behavior

./: .gitignore  .gitmodules  1.0-IndividualMatrix.py  1.1-individual_files.py  1.2-matrix_site_regression.py  1.3-comparison_and_spearman.py  1.IndividualMatrix.py  1.comparison_and_spearman.py  1.individual_files.py  1.matrix_site_regression.py  2.1-behavioral_filtering.py  2.2-behavioral_site_regression_and_pca.py  2.3-generating_pset.py  2.behavioral_filtering.py  3-CCA_and_permutation.py  3.CCA_and_permutation.py  README.md  pyproject.toml
AIIM 2024/: README.md  permcca.py  utils.py
AIIM 2024/behavior/: README.md  behavioral_site_regression.py
AIIM 2024/gradients/: README.md  matrix_site_regression.py
Generating Plots/: grad_beh_comp_analysis.ipynb  gradient_plotting.ipynb  network_and_variance_analysis.ipynb
Intermediates and Presentations/AIIM 2024/: CCA_and_permutation.py
Intermediates and Presentations/OHBM Abstract 2024/: CCA.py  resample.py
Intermediates-and-Presentations/: README.md
Intermediates-and-Presentations/AIIM 2024/: CCA_and_permutation.py
Intermediates-and-Presentations/OHBM 2024/: README.md
Intermediates-and-Presentations/OHBM Abstract 2024/: CCA.py  resample.py
OHBM 2024/: CCA_and_permutation.py  README.md
OHBM 2024/Post-hoc/: README.md  nik_CCA.py  nik_group_and_spearman.py  nik_mats.py  nik_mia_fc.py  nik_schaefer_CCA.py  nik_schaefer_mats.py  nik_ts_to_fc.py
OHBM 2024/behavior/: README.md  behavioral_filtering.py
OHBM Abstract 2024/: README.md  analysis.py  resample.py
OSF Preregistration/: CCA.py  power.ipynb
(+42 files in other folders)
